add redirection + trying to uniformize test env path and prod path

--- a/webApp/flaskr/templates/blog/dashboard.html
+++ b/webApp/flaskr/templates/blog/dashboard.html
@@ -1,6 +1,11 @@
 {% extends 'base.html' %}
+  {% block header %}
+    <div><h1>{% block title %}Hello {{ user }}{% endblock %}</h1></div>
+    <form action = "/success" method = "post" enctype="multipart/form-data">   
+      <input type="file" name="file" />   
+      <input type = "submit" value="Upload">   
+    </form>
+  {% endblock %}
 
-{% block header %}
-  <h1>{% block title %}Hello {{ user }}{% endblock %}</h1>
-{% endblock %}
+
 
